# oxideav-dts

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: audblk.rs  audio_array.rs  audio_data.rs  audio_header.rs  audio_huff.rs  bitreader.rs  bits.rs  block_code.rs  cos_mod.rs  d6_block_book.rs  decoder.rs  drc_range.rs  dsync.rs  filter_bank.rs  fir_coeff.rs  header.rs  huffman.rs  inverse_adpcm.rs  iter.rs  join_scale.rs  joint_subband.rs  lfe_fir_coeff.rs  lfe_interp.rs  lfe_synth.rs  lib.rs  pqf.rs  qmf_assemble.rs  qmf_multichannel.rs  qmf_synth.rs  registry.rs  side_info.rs  step_size.rs  subframe.rs  subframe_pcm.rs  sum_diff.rs  syncwords.rs  tables.rs  unpack14.rs  vq.rs
tests/: black_box_ffmpeg.rs  black_box_ffmpeg_pcm.rs  dynf_range_decode.rs  ffmpeg_roundtrip.rs  multi_frame_iter.rs  side_info_decode.rs
tests/fixtures/: dts_5_frames_ffmpeg_ref.s32
