[package]
name = "oxideav-dts"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-dts"
authors = ["Mark Karpeles"]
description = "Pure-Rust DTS audio decoder (Core profile, with EXSS/XCH/XXCH/X96/XLL extensions planned) for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-dts"
keywords = ["multimedia", "audio", "dts", "dca", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
