[package]
name = "oxideav-dts"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-dts"
authors = ["Mark Karpeles"]
description = "Pure-Rust DTS audio decoder (Core profile, with EXSS/XCH/XXCH/X96/XLL extensions planned) for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-dts"
keywords = ["multimedia", "audio", "dts", "dca", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]
# Gate the oxideav-core dep + Decoder trait impl + register!() macro
# behind this feature so the crate also builds with
# `--no-default-features --lib` for standalone consumers (CLI tools,
# stream-only parsers) that just want the structural frame-header
# parser without the codec-registry surface.
registry = ["dep:oxideav-core"]
